# ai-driven-qa-framework-py

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  INSTALL.md  README.md  conftest.py  pyproject.toml
.agents/skills/: automation-generate  ci-setup  contract-test  coverage-gap  create-bug  create-test-cases  data-factory  explore-app  flaky-triage  gen-auto-test  mcp-setup  new-module  publish-testcases  qa-agent  qa-status  read-report  run-tests  update-conventions  user-story-test  visual-regression
.claude/skills/automation-generate/: SKILL.md
.claude/skills/ci-setup/: SKILL.md
.claude/skills/contract-test/: SKILL.md
.claude/skills/coverage-gap/: SKILL.md
.claude/skills/create-bug/: SKILL.md
.claude/skills/create-test-cases/: SKILL.md
.claude/skills/data-factory/: SKILL.md
.claude/skills/explore-app/: SKILL.md
.claude/skills/flaky-triage/: SKILL.md
.claude/skills/gen-auto-test/: SKILL.md
.claude/skills/gen-auto-test/scripts/: import_testcases_excel.py
.claude/skills/mcp-setup/: SKILL.md
.claude/skills/new-module/: SKILL.md
.claude/skills/publish-testcases/: SKILL.md
.claude/skills/qa-agent/: SKILL.md
.claude/skills/qa-agent/examples/: changeset-example.md  issue-note-example.md  memory.md  navigation.md  sample_lifecycle_spec.py  sample_page_object.py  sample_spec.py  sample_testcases.json  test-case.md
.claude/skills/qa-agent/references/: ac-parsing.md  duplicate-detection.md  fallbacks.md  framework-conventions.md  jenkins-trigger.md  jira-sync.md  json-contract.md  mcp-usage.md  priority-scoring.md  python-export-runner.md  review-table-rendering.md  test-case-template.md  test-management.md  testing-strategy.md  tracking-files.md  workflow.md
.claude/skills/qa-agent/scripts/: attach_file_to_jira.py  create_gitlab_mr.py  create_mr.py  export_json_to_excel.py  export_json_to_trustify_excel.py  find_related_tests.py  json_quality_checks.py  trigger_jenkins.py
.claude/skills/qa-status/: SKILL.md
.claude/skills/read-report/: SKILL.md
.claude/skills/review-code/: SKILL.md
.claude/skills/run-tests/: SKILL.md
.claude/skills/setup/: SKILL.md
.claude/skills/update-conventions/: SKILL.md
.claude/skills/user-story-test/: SKILL.md
.claude/skills/visual-regression/: SKILL.md
ci/github-actions/: pr-smoke.yml  regression.yml
ci/gitlab/: .gitlab-ci.yml
ci/jenkins/: Jenkinsfile
docs/ai/: memory.md  test-case.md
docs/ai/api/: memory.md  test-case.md
docs/ai/mobile/: memory.md  test-case.md
docs/ai/performance/: memory.md  test-case.md
docs/ai/ui/: navigation.md
environments/: .env.dev.example  .env.example  .env.git.example  .env.gitlab.example  .env.jira.example  .env.prod.example  .env.test.example
src/aiqa_framework/agent/: cli.py
src/aiqa_framework/agent/agents/: failure_diagnosis_agent.py
src/aiqa_framework/agent/analyzers/: patch_guard.py
src/aiqa_framework/agent/collectors/: ci_metadata_collector.py  pytest_report_reader.py
src/aiqa_framework/agent/config/: ai_provider.py
src/aiqa_framework/agent/orchestration/: doctor.py
src/aiqa_framework/agent/providers/: llm.py
src/aiqa_framework/agent/reports/: ci_summary_writer.py  diagnosis_report_writer.py  stakeholder_html.py
src/aiqa_framework/agent/schemas/: ci_metadata.py
src/aiqa_framework/agent/utils/: run_id.py
src/aiqa_framework/agent/watchers/: critical_pattern_detector.py
src/aiqa_framework/ai_qa_agent/: cli.py
src/aiqa_framework/ai_qa_agent/agents/: failure_diagnosis_agent.py
src/aiqa_framework/ai_qa_agent/analyzers/: patch_guard.py
src/aiqa_framework/ai_qa_agent/collectors/: ci_metadata_collector.py  pytest_report_reader.py
src/aiqa_framework/ai_qa_agent/config/: ai_provider.py  policy.py
src/aiqa_framework/ai_qa_agent/orchestration/: doctor.py
src/aiqa_framework/ai_qa_agent/providers/: llm.py
src/aiqa_framework/ai_qa_agent/reports/: ci_summary_writer.py  diagnosis_report_writer.py  stakeholder_html.py
src/aiqa_framework/ai_qa_agent/schemas/: diagnosis.py  failure_event.py
src/aiqa_framework/ai_qa_agent/utils/: paths.py  run_id.py
src/aiqa_framework/ai_qa_agent/watchers/: critical_pattern_detector.py
src/aiqa_framework/api/: client.py  models.py
src/aiqa_framework/api/contracts/: openapi_sample.yaml
src/aiqa_framework/api/mock/: respx_handlers.py  standalone_app.py  store.py
src/aiqa_framework/api/services/: auth_service.py  user_service.py
src/aiqa_framework/config/: settings.py  tags.py
src/aiqa_framework/core/: action_keyword.py  auth.py  base_page.py
src/aiqa_framework/grpc/: client.py  mock_server.py
src/aiqa_framework/jira/: bug_reporter.py
src/aiqa_framework/mcp_servers/: framework_context.py  memory.py  qa_report.py  test_runner.py
src/aiqa_framework/mcp_servers/shared/: policy.py  result.py
src/aiqa_framework/mobile/: action_keyword.py  capabilities.py  driver_factory.py
src/aiqa_framework/mobile/screens/: base_screen.py  sample_login_screen.py
src/aiqa_framework/modules/: __init__.py
src/aiqa_framework/modules/api/: README.md  __init__.py  conventions.md
src/aiqa_framework/modules/mobile/: README.md  action_keyword.py  capabilities.py  conventions.md  driver_factory.py
src/aiqa_framework/modules/performance/: README.md  __init__.py  conventions.md
src/aiqa_framework/modules/ui/: README.md  action_keyword.py  (+3 more)
src/aiqa_framework/pages/: sample_page.py
src/aiqa_framework/shared/: README.md  __init__.py  conventions.md
src/aiqa_framework/testdata/: sample_data.py
tests/: conftest.py
tests/api/: conftest.py  test_sample_api.py  test_sample_respx.py
tests/api/graphql/: conftest.py  test_sample_graphql.py
tests/api/grpc/: conftest.py  test_sample_grpc.py
tests/api/rest/: conftest.py  test_sample_api.py  test_sample_lifecycle.py  test_sample_respx.py
tests/grpc/: conftest.py  test_sample_grpc.py
tests/mobile/: conftest.py  test_sample_native.py
tests/mobile_web/: conftest.py  test_sample_mobile_web.py
tests/performance/: test_perf_smoke.py
tests/ui/: conftest.py  test_sample.py
tests/ui/mobile_web/: conftest.py  test_sample_mobile_web.py
(+41 files in other folders)
