[project]
name = "aiqa-framework"
version = "0.1.0"
description = "AI-Driven QA Framework (Python port) — Playwright + pytest, POM + ActionKeyword, API/gRPC/mobile, AI QA Agent, MCP servers."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    # UI
    "playwright>=1.48",
    "pytest>=8.3",
    "pytest-playwright>=0.5",
    "pytest-xdist>=3.6",
    "pytest-rerunfailures>=14.0",
    # API
    "httpx>=0.27",
    "pydantic>=2.9",
    "pydantic-settings>=2.5",
    "python-dotenv>=1.0",
    # gRPC
    "grpcio>=1.66",
    "protobuf>=5.28",
    "pytest-grpc>=0.8",
    # Mobile (native)
    "Appium-Python-Client>=4.1",
    # Reporting
    "allure-pytest>=2.13",
    "pytest-json-report>=1.5",
    "jinja2>=3.1",
    "python-docx>=1.1",
    # AI QA Agent
    "watchdog>=5.0",
    "anthropic>=0.39",
    "openai>=1.50",
    "typer>=0.12",
    # API mock server
    "fastapi>=0.115",
    "uvicorn>=0.31",
    "respx>=0.21",
    # MCP servers
    "mcp>=1.1",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.6",
    "mypy>=1.11",
    "grpcio-tools>=1.66",
    "schemathesis>=3.36",
    "poethepoet>=0.29",
    "types-protobuf",
]

[project.scripts]
aiqa = "aiqa_framework.ai_qa_agent.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/aiqa_framework"]

# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-ra --json-report --json-report-file=test-output/pytest-report.json"
markers = [
    "jira(key): link a test to its parent Jira story key",
    "regression: full regression suite",
    "smoke: fast smoke subset",
    "p0: priority 0",
    "p1: priority 1",
    "p2: priority 2",
    "api: REST API tests",
    "grpc: gRPC tests",
    "mobile: mobile tests (web or native)",
    "mobile_web: Playwright mobile-web emulation",
    "mobile_native: native Appium (needs a device; skip-gated by ALLOW_MOBILE_NATIVE)",
    "bugs: asserts currently-broken behaviour (expected to fail)",
]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
namespace_packages = true
explicit_package_bases = true
mypy_path = "src"

# ---------------------------------------------------------------------------
# Task runner — the `package.json scripts` equivalent.  `uv run poe <task>`.
[tool.poe.tasks]
test = "pytest"
"test-dev" = { cmd = "pytest", env = { test_env = "dev" } }
"test-test" = { cmd = "pytest", env = { test_env = "test" } }
"test-prod" = { cmd = "pytest", env = { test_env = "prod" } }
"test-api" = { cmd = "pytest -m api", env = { test_env = "test", SKIP_WEB_AUTH = "1" } }
"test-grpc" = { cmd = "pytest -m grpc", env = { test_env = "test", SKIP_WEB_AUTH = "1" } }
"test-mobile-web" = { cmd = "pytest -m mobile_web", env = { test_env = "test" } }
"test-mobile-native" = { cmd = "pytest -m mobile_native", env = { test_env = "test", ALLOW_MOBILE_NATIVE = "1" } }
"mock-api" = "python -m aiqa_framework.api.mock.standalone_app"
"grpc-mock" = "python -m aiqa_framework.grpc.mock_server"
"proto-gen" = "python -m grpc_tools.protoc -I src/aiqa_framework/grpc/proto/casino --python_out=src/aiqa_framework/grpc/generated --grpc_python_out=src/aiqa_framework/grpc/generated --pyi_out=src/aiqa_framework/grpc/generated src/aiqa_framework/grpc/proto/casino/game.proto"
"report-all" = "aiqa report-all"
lint = "ruff check ."
format = "ruff format ."
typecheck = "mypy src"
